--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  sqflite: ^2.0.0+4
-  http: ^0.13.3
-  path_provider: ^2.0.2
+  sqflite: ^2.0.1
+  http: ^0.13.4
+  path_provider: ^2.0.8
   path: ^1.8.0
 
 
